--- a/manifests/backend.yaml
+++ b/manifests/backend.yaml
@@ -5,6 +5,9 @@ metadata:
   namespace: devops
   labels:
     app: devops-backend
+  annotations:
+    argocd-image-updater.argoproj.io/image-list: backend=ghcr.io/devsyw/devops-platform-backend
+    argocd-image-updater.argoproj.io/backend.update-strategy: latest
 spec:
   replicas: 1
   selector:
@@ -21,16 +24,16 @@ spec:
         - key: node-role.kubernetes.io/control-plane
           operator: Exists
           effect: NoSchedule
+      imagePullSecrets:
+        - name: ghcr-secret
       containers:
         - name: backend
-          image: 192.168.2.2:30080/devops/backend:latest
+          image: ghcr.io/devsyw/devops-platform-backend:latest
           ports:
             - containerPort: 8080
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: "local"
-            - name: SPRING_DATASOURCE_URL
-              value: "jdbc:h2:mem:devops;DB_CLOSE_DELAY=-1"
           resources:
             requests:
               cpu: 100m
@@ -42,13 +45,13 @@ spec:
             httpGet:
               path: /api/health
               port: 8080
-            initialDelaySeconds: 30
+            initialDelaySeconds: 40
             periodSeconds: 10
           readinessProbe:
             httpGet:
               path: /api/health
               port: 8080
-            initialDelaySeconds: 15
+            initialDelaySeconds: 20
             periodSeconds: 5
 ---
 apiVersion: v1
@@ -64,4 +67,3 @@ spec:
   ports:
     - port: 8080
       targetPort: 8080
-      protocol: TCP
