--- a/devops-tools/03-frontend.yaml
+++ b/devops-tools/03-frontend.yaml
@@ -1,10 +1,9 @@
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: devops-frontend
-  namespace: devops
-  labels:
-    app: devops-frontend
+  namespace: devops-tools
 spec:
   replicas: 1
   selector:
@@ -15,15 +14,12 @@ spec:
       labels:
         app: devops-frontend
     spec:
-      nodeSelector:
-        node-role.kubernetes.io/control-plane: ""
-      tolerations:
-        - key: node-role.kubernetes.io/control-plane
-          operator: Exists
-          effect: NoSchedule
+      imagePullSecrets:
+        - name: harbor-pull-secret
       containers:
         - name: frontend
-          image: 192.168.2.2:30080/devops/frontend:latest
+          image: harbor.devops.cicd.test/devops-platform/frontend:latest
+          imagePullPolicy: Always
           ports:
             - containerPort: 80
           resources:
@@ -33,7 +29,7 @@ spec:
             limits:
               cpu: 200m
               memory: 128Mi
-          livenessProbe:
+          readinessProbe:
             httpGet:
               path: /
               port: 80
@@ -44,15 +40,10 @@ apiVersion: v1
 kind: Service
 metadata:
   name: devops-frontend
-  namespace: devops
-  labels:
-    app: devops-frontend
+  namespace: devops-tools
 spec:
-  type: NodePort
   selector:
     app: devops-frontend
   ports:
     - port: 80
       targetPort: 80
-      nodePort: 30000
-      protocol: TCP
